# chatlet

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  __init__.py  chatette.py  chatlet.py  debug.py  model_pricing.py  package.json  pyproject.toml  requirements.txt  setup.py  test_chatette.py  test_chatlet.py
.github/workflows/: publish-to-pypi.yml  run-tests.yml
docs/: index.html
src/chatlet/: __init__.py  main.py  model_pricing.py  requirements.txt  test_chatlet.py  update_model_pricing.py
