[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatlet"
version = "0.1.3"
authors = [
  { name="Slava Vishnyakov", email="bomboze@gmail.com" },
]
description = "A Python wrapper for the OpenRouter API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "requests",
    "python-dotenv",
    "fastcore",
]

[project.urls]
"Homepage" = "https://github.com/slava-vishnyakov/chatlet"
"Bug Tracker" = "https://github.com/slava-vishnyakov/chatlet/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chatlet = ["LICENSE"]
